added address and GMap location

--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
             <div class="contact-address">
               <i class="ion-ios-location-outline"></i>
               <h3>Address</h3>
-              <address>A108 Adam Street, NY 535022, USA</address>
+              <a href="https://goo.gl/maps/MDZXztzjRwp2vbEC9"><address>15, Narmadanagar -1, Manjalput, Vadodara - 390011</address></a><br>
             </div>
           </div>
 
