--- a/index.html
+++ b/index.html
@@ -747,9 +747,12 @@
 
           <div class="col-md-4">
             <div class="contact-address">
+              <a href="https://goo.gl/maps/aC2KWjRRvYj6z8Eo6" target="_blank">
               <i class="ion-ios-location-outline"></i>
               <h3>Address</h3>
-              <a href="https://goo.gl/maps/aC2KWjRRvYj6z8Eo6" target="_blank"><address>15, Narmadanagar -1, Manjalput, Vadodara - 390011</address></a><br>
+                <address>15, Narmadanagar -1, Manjalput, Vadodara - 390011</address>
+              </a>
+              <br>
             </div>
           </div>
 
