--- a/index.html
+++ b/index.html
@@ -774,30 +774,93 @@
 
         </div>
 
+        <!--<div class="form">-->
+          <!--<div id="sendmessage">Your message has been sent. Thank you!</div>-->
+          <!--<div id="errormessage"></div>-->
+          <!--<form action="https://mailthis.to/bhansalirushabh@gmail.com" method="post" role="form" class="contactForm" encType="multipart/form-data">-->
+            <!--<div class="form-row">-->
+              <!--<div class="form-group col-md-6">-->
+                <!--<input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />-->
+                <!--<div class="validation"></div>-->
+              <!--</div>-->
+              <!--<div class="form-group col-md-6">-->
+                <!--<input type="email" class="form-control" name="_replyto" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />-->
+                <!--<div class="validation"></div>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--<div class="form-group">-->
+              <!--<input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />-->
+              <!--<div class="validation"></div>-->
+            <!--</div>-->
+            <!--<div class="form-group">-->
+              <!--<textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>-->
+              <!--<div class="validation"></div>-->
+            <!--</div>-->
+            <!--<div class="text-center"><button type="submit">Send Message</button></div>-->
+            <!--<input type="hidden" name="_subject" value="Contact form submitted">-->
+            <!--<input type="hidden" name="_after" value="https://myhomepage.net/">-->
+            <!--<input type="hidden" name="_honeypot" value="">-->
+            <!--<input type="hidden" name="_confirmation" value="">-->
+            <!--<input type="submit" value="Send">-->
+          <!--</form>-->
+        <!--</div>-->
+
         <div class="form">
-          <div id="sendmessage">Your message has been sent. Thank you!</div>
-          <div id="errormessage"></div>
-          <form action="" method="post" role="form" class="contactForm">
+          <form action="https://mailthis.to/bhansalirushabh@gmail.com"
+                method="POST" encType="multipart/form-data" >
             <div class="form-row">
-              <div class="form-group col-md-6">
-                <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+              <div class="form-group col-md-4">
+                <input type="text" name="name" placeholder="Your name" class="form-control" id="name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" >
                 <div class="validation"></div>
               </div>
-              <div class="form-group col-md-6">
-                <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+              <div class="form-group col-md-4">
+                <input type="email" name="_replyto" placeholder="Your email" class="form-control" id="email" data-rule="email" data-msg="Please enter a valid email">
                 <div class="validation"></div>
               </div>
+              <!--<div class="form-group col-md-4">-->
+                <!--<input type="text" name="_phone" placeholder="Phone Number" class="form-control" data-rule="minlen:4" data-msg="Please enter at least 4 chars">-->
+              <!--</div>-->
             </div>
-            <div class="form-group">
-              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-              <div class="validation"></div>
-            </div>
+            <!--<div class="form-row">-->
+              <!--<div class="form-group col-md-4">-->
+                <!--<input type="text" name="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 4 chars">-->
+              <!--</div>-->
+            <!--</div>-->
             <div class="form-group">
               <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-              <div class="validation"></div>
             </div>
-            <div class="text-center"><button type="submit">Send Message</button></div>
+
+            <!--<input type="file" name="file" placeholder="Attachments (optional)">-->
+            <input type="hidden" name="_subject" value="Contact form submitted">
+            <input type="hidden" name="_after" value="https://myhomepage.net/">
+            <input type="hidden" name="_honeypot" value="">
+            <input type="hidden" name="_confirmation" value="">
+            <input type="submit" value="Send">
+            <!--<div class="text-center"><button type="submit" value="send">Send Message</button></div>-->
           </form>
+        </div>
+
+        <div class="form">
+          <form action="https://mailthis.to/bhansalirushabh@gmail.com"
+                method="POST" encType="multipart/form-data">
+            <input type="text" name="name" placeholder="Your name">
+            <input type="email" name="_replyto" placeholder="Your email">
+            <textarea name="message" placeholder="Enter your message here"></textarea>
+            <input type="file" name="file" placeholder="Attachments (optional)">
+            <input type="hidden" name="_subject" value="Contact form submitted">
+            <input type="hidden" name="_after" value="https://myhomepage.net/">
+            <input type="hidden" name="_honeypot" value="">
+            <input type="hidden" name="_confirmation" value="">
+            <input type="submit" value="Send">
+          </form>
+
+          <form action="https://mailthis.to/bhansalirushabh@gmail.com"
+                method="POST">
+            <input type="text" name="name" placeholder="Your name">
+            <input type="email" name="_replyto" placeholder="Your email">
+            <input type="submit" value="Send">
+          </form>
+
         </div>
 
       </div>
@@ -900,6 +963,8 @@
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
+
+
 
 </body>
 </html>
