--- a/index.html
+++ b/index.html
@@ -817,9 +817,9 @@
                 <input type="email" name="_replyto" placeholder="Your email" class="form-control" id="email" data-rule="email" data-msg="Please enter a valid email">
                 <div class="validation"></div>
               </div>
-              <!--<div class="form-group col-md-4">-->
-                <!--<input type="text" name="_phone" placeholder="Phone Number" class="form-control" data-rule="minlen:4" data-msg="Please enter at least 4 chars">-->
-              <!--</div>-->
+              <div class="form-group col-md-4">
+                <input type="text" name="_phone" placeholder="Phone Number" class="form-control" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
+              </div>
             </div>
             <!--<div class="form-row">-->
               <!--<div class="form-group col-md-4">-->
